# proxeratech-ai-head

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  health.py  orchestrator.py
